# logs_parser

./: CMakeLists.txt
cli/: main.cpp
include/logs_parser/: filters.hpp  logs_parser.hpp
sources/logs_parser/: logs_parser.cpp
